fixed links to other projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
 
         <a
-          href="../tribute page/index.html"
+          href="./tribute page/index.html"
           target="_blank"
           class="project project-tile"
         >
@@ -71,7 +71,7 @@
         </a>
 
         <a
-          href="../technical documentation/index.html"
+          href="./technical documentation/index.html"
           target="_blank"
           class="project project-tile"
         >
@@ -88,7 +88,7 @@
         </a>
 
         <a
-          href="../survey form/index.html"
+          href="./survey form/index.html"
           target="_blank"
           class="project project-tile"
         >
@@ -105,7 +105,7 @@
         </a>
 
         <a
-          href="../landing page/index.html"
+          href="./landing page/index.html"
           target="_blank"
           class="project project-tile"
         >
