added downloaded file and hardcoded links to imgs & projs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         >
           <img
             class="project-image"
-            src="./public/PersonalSportsCardsSite.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/PersonalSportsCardsSite.jpg"
             alt="project"
           />
           <p class="project-title">
@@ -54,13 +54,13 @@
         </a>
 
         <a
-          href="./tribute page/index.html"
+          href="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/tribute%20page/index.html"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="./public/TributePage.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/TributePage.jpg"
             alt="project"
           />
           <p class="project-title">
@@ -71,13 +71,13 @@
         </a>
 
         <a
-          href="./technical documentation/index.html"
+          href="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/technical%20documentation/index.html"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="./public/TechDocumentationPage.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/TechDocumentationPage.jpg"
             alt="project"
           />
           <p class="project-title">
@@ -88,13 +88,13 @@
         </a>
 
         <a
-          href="./survey form/index.html"
+          href="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/survey%20form/index.html"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="./public/SurveyFormPage.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/SurveyFormPage.jpg"
             alt="project"
           />
           <p class="project-title">
@@ -105,13 +105,13 @@
         </a>
 
         <a
-          href="./landing page/index.html"
+          href="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/landing%20page/index.html"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="./public/CatsLandingPage.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/CatsLandingPage.jpg"
             alt="project"
           />
           <p class="project-title">
