styling changes and added icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -27,7 +33,7 @@
     <!-- put images in github or replit.com -->
     <section id="welcome-section" class="welcome-section">
       <h1>Hello I am Michael,</h1>
-      <p>a web designer</p>
+      <p>a web engineer</p>
     </section>
 
     <!-- END WELCOME SECTION -->
@@ -135,7 +141,47 @@
           href="https://www.github.com/mikeleonida"
           target="_blank"
           class="btn contact-details"
-          ><i class="fab fa-github"></i> GitHub</a
+          ><i class="fab fa-github"></i> GitHub
+        </a>
+
+        <a
+          id="profile-link"
+          href="https://www.twitter.com/mleonida"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-twitter"></i> Twitter
+        </a>
+
+        <a
+          id="profile-link"
+          href="https://www.facebook.com/mileonida"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-facebook-square"></i> Facebook
+        </a>
+
+        <a
+          id="profile-link"
+          href="https://www.instagram.com/mileonida"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-instagram"></i> Instagram
+        </a>
+
+        <a
+          id="profile-link"
+          href="https://www.linkedin.com/in/michael-leonida-ba082420/"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+
+        <a
+          id="profile-link"
+          href="https://mikeleonida.github.io/practicePersonalSite/"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-html5"></i> Previous Portfolio</a
         >
       </div>
     </section>
