--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Technical Documentation Page
+            Documentation Page
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
