Styling changes Oct 21st

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- START WELCOME SECTION -->
     <!-- put images in github or replit.com -->
     <section id="welcome-section" class="welcome-section">
-      <h1>Hello I am Michael,</h1>
+      <h1>Hello I am Michael</h1>
       <p>a web engineer</p>
     </section>
 
@@ -138,8 +138,9 @@
     <!-- START CONTACT SECTION -->
 
     <section id="contact" class="contact-section">
-      <div class="contact-section-header">
-        <h2>Let's work together...</h2>
+      <!-- <div class="contact-section-header"> -->
+      <h2>Let's work together...</h2>
+      <div class="contact-grid">
         <a
           id="profile-link"
           href="https://www.github.com/mikeleonida"
@@ -188,6 +189,7 @@
           ><i class="fab fa-html5"></i> Previous Portfolio</a
         >
       </div>
+      <!-- </div> -->
     </section>
 
     <!-- END CONTACT SECTION -->
