added GoFundMe page

--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
+
+        <a
+          href="https://gofund.me/7e7c599a "
+          target="_blank"
+          class="project project-tile"
+        >
+          <img
+            class="project-image"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/CatsLandingPage.jpg"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            GoFundMe Page
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
       </div>
     </section>
 
