added GoFundMe pic

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         </a>
 
         <a
-          href="https://gofund.me/7e7c599a "
+          href="https://gofund.me/7e7c599a"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/CatsLandingPage.jpg"
+            src="https://mikeleonida.github.io/Web-Design-Bootcamp-FCC/public/GoFundMe.png"
             alt="project"
           />
           <p class="project-title">
